# gettingStartWithQtQuickSubProject

./: CMakeLists.txt  README.md  gettingStartWithQtQuickSubProject.qrc
math/: CMakeLists.txt
math/src/: MyMath.cpp
src/: main.cpp
src/QML/: main.qml
src/include/: MyMath.h
